--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,14 +1,16 @@
 
-.header-margin{
+.header-margin {
     padding-top: 10px;
     padding-bottom: 10px;
 
 }
-.header-nav{
+
+.header-nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 body {
     margin: 0;
     display: flex;
@@ -23,69 +25,88 @@ body {
     text-decoration: none;
     transition: color 0.5s
 }
-.ssilka:hover{
+
+.ssilka:hover {
     color: black;
 }
-.nav_roboto
-{
+
+.nav_roboto {
     font-family: 'Roboto', sans-serif;
 }
-.roboto{
+
+.roboto {
     font-family: 'Roboto', sans-serif;
 }
-.li-nav{
+
+.li-nav {
     width: 150px;
     display: inline-block;
 }
-.size2{
-    padding:0 50px;
-    margin-bottom:10px;
+
+.size2 {
+    padding: 0 50px;
+    margin-bottom: 10px;
 }
-footer{
+
+footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 50px;
+    padding: 0 50px;
     background: #222222;
 }
-.title_color{
-    background: #555555 ;
+
+.title_color {
+    background: #555555;
 
 }
-.nav_color
-{
+
+.nav_color {
     position: sticky;
     top: 0;
-    border-radius:0 0 20px 20px;
+    border-radius: 0 0 20px 20px;
     background: #555555;
 }
-.size1{
-    width: 1440px ;
+
+.size1 {
+    width: 1440px;
     background: #999999;
 }
-.lato{
+
+.lato {
     font-family: 'Lato', sans-serif;
 }
-.header-import{
+
+.header-import {
     display: flex;
 }
-.left1{
+
+.left1 {
     margin-left: 120px;
     align-self: center;
 }
-#contacts{
+
+#contacts {
     margin-top: 0;
 }
-.code-background{
+
+.code-background {
     background: #222222;
 }
-#code{
+
+#code {
     margin-top: 0;
     margin-bottom: 0;
 }
-.pre-none{ margin-top: 0;
-    margin-bottom: 0;}
-#education{ margin-top: 0}
+
+.pre-none {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#education {
+    margin-top: 0
+}
 
 table {
     width: 500px; /* Ширина таблицы */
@@ -94,53 +115,59 @@ table {
     margin: auto;
 
 }
+
 td {
     text-align: center; /* Выравниваем текст по центру ячейки */
 }
-.indent
-{
+
+.indent {
     padding: 0;
-    margin:10px 0;
-}
-.photo{
-    width: 400px;
-    height: 300px;
-    padding:0 25px;
+    margin: 10px 0;
 }
 
-.image_indent
-{
-    padding:0 25px;
+.photo {
+    width: 400px;
+    height: 300px;
+    padding: 0 25px;
 }
-.image_center{
+
+.image_indent {
+    padding: 0 25px;
+}
+
+.image_center {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-.spec_table
-{
+
+.spec_table {
     display: flex;
     align-items: center;
     justify-content: center
 }
-table{
-    border-style:solid;
+
+table {
+    border-style: solid;
     border-color: black;
     border-collapse: collapse;
 }
-td{
-    border-style:solid;
+
+td {
+    border-style: solid;
     border-color: black;
 }
-th{
-    border-style:solid;
+
+th {
+    border-style: solid;
     border-color: black;
 }
+
 .dropbtn {
     font-family: 'Roboto', sans-serif;
     background-color: #555555;
     color: white;
-    padding:10px 0;
+    padding: 10px 0;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -158,7 +185,7 @@ th{
     right: 0;
     background-color: #999999;
     min-width: 300px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     border-radius: 20px;
 }
@@ -170,33 +197,40 @@ th{
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #999999;}
-.dropdown:hover .dropdown-content {display: block;}
-.dropdown:hover .dropbtn {color: black}
+.dropdown-content a:hover {
+    background-color: #999999;
+}
 
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
-
+.dropdown:hover .dropbtn {
+    color: black
+}
 
 
 .c-button {
     appearance: none;
     border: 0;
     border-radius: 15px;
-    background:#fff;
+    background: #fff;
     color: black;
     padding: 8px 16px;
     font-size: 15px;
 }
-.border_rad
-{
+
+.border_rad {
     border-radius: 20px;
 }
-.rad{
+
+.rad {
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
-.center{
+
+.center {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -204,6 +238,7 @@ th{
     margin-right: 10px;
     margin-top: 10px;
 }
+
 /* Позиционируем палитру так, чтобы она располагалась в правом верхнем углу страницы */
 .color-panel {
     position: absolute; /* задаем абсолютное позиционирование */
@@ -212,9 +247,9 @@ th{
     background-color: #fff;
     height: 60px;
     padding: 15px 5px 5px 5px; /* задаем внутренние отступы */
-    -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.35); /* добавим тень*/
-    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.35);
-    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.35);
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35); /* добавим тень*/
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
     border-radius: 0px 0px 30px 30px; /* закруглим края панели */
 }
 
@@ -223,24 +258,31 @@ th{
     height: 50px;
     width: 50px;
     border-radius: 30px;
-    float:left;
+    float: left;
     margin: 5px;
 }
 
 /* Для каждого блока с «цветным» идентификатором зададим соответствующий названию цвет фона */
-#blue{
+#blue {
     background-color: #b3e5fc;
 }
-#red{
+
+#red {
     background-color: #ffcdd2;
 }
-#green{
+
+#green {
     background-color: #c5e1a5;
 }
-#orange{
+
+#orange {
     background-color: #ffcc80;
 }
-#grey
-{
+
+#grey {
     background-color: #888888;
+}
+
+.visible {
+    display: none;
 }
