--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -406,7 +406,7 @@ input {
 }
 
 .ms-container {
-    background: transparent url('/src/main/webapp/resources/image/switch.png') no-repeat 50% 50%;
+    background: transparent url("/resources/image/switch.png") no-repeat 50% 50%;
     width: 370px;
 }
 
